RESOLVED FIXED249601
Fix handling of grid-template-columns / grid-template-rows in CSS Typed OM
https://bugs.webkit.org/show_bug.cgi?id=249601
Summary Fix handling of grid-template-columns / grid-template-rows in CSS Typed OM
Chris Dumez
Reported 2022-12-19 12:01:34 PST
Fix handling of grid-template-columns / grid-template-rows in CSS Typed OM.
Attachments
Chris Dumez
Comment 1 2022-12-19 12:10:37 PST
EWS
Comment 2 2022-12-19 15:48:19 PST
Committed 258102@main (a5f4bb317a21): <https://commits.webkit.org/258102@main> Reviewed commits have been landed. Closing PR #7863 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-12-19 15:49:36 PST
Note You need to log in before you can comment on or make changes to this bug.