Source/WebCore/style/StyleBuilderConverter.h
@@ -1051,6 +1051,7 @@ inline GridTrackSize BuilderConverter::createGridTrackSize(const CSSValue& value
 
 inline bool BuilderConverter::createGridTrackList(const CSSValue& value, GridTrackList& trackList, BuilderState& builderState)
 {
+    RefPtr<const CSSValueList> valueList;
     // Handle 'none' or 'masonry'.
     if (auto* primitiveValue = dynamicDowncast<CSSPrimitiveValue>(value)) {
         if (primitiveValue->valueID() == CSSValueMasonry) {
@@ -1058,14 +1059,22 @@ inline bool BuilderConverter::createGridTrackList(const CSSValue& value, GridTra
             trackList.append(GridTrackEntryMasonry());
             return true;
         }
-        return primitiveValue->valueID() == CSSValueNone;
-    }
+        // Values coming from CSS Typed OM may not have been converted to a CSSValueList yet.
+        if (primitiveValue->valueID() == CSSValueNone)
+            return true;
 
-    if (!is<CSSValueList>(value))
+        auto newList = CSSValueList::createSpaceSeparated();
+        newList->append(const_cast<CSSValue&>(value));
+        valueList = WTFMove(newList);
+    } else if (is<CSSValueList>(value))
+        valueList = &downcast<CSSValueList>(value);
+    else
         return false;
 
+    ASSERT(valueList);
+
     bool isSubgrid = false;
-    if (is<CSSSubgridValue>(value)) {
+    if (is<CSSSubgridValue>(*valueList)) {
         isSubgrid = true;
         trackList.append(GridTrackEntrySubgrid());
     }
@@ -1097,7 +1106,7 @@ inline bool BuilderConverter::createGridTrackList(const CSSValue& value, GridTra
             ensureLineNames(repeatList);
     };
 
-    for (auto& currentValue : downcast<CSSValueList>(value)) {
+    for (auto& currentValue : *valueList) {
         if (is<CSSGridLineNamesValue>(currentValue)) {
             Vector<String> names;
             for (auto& namedGridLineValue : downcast<CSSGridLineNamesValue>(currentValue.get()))
